feat(Core.CrossCuttingConcerns.Logging): implemented log infrastructure

--- a/src/Core.CrossCuttingConcerns.Exception.WebApi/Core.CrossCuttingConcerns.Exception.WebApi.csproj
+++ b/src/Core.CrossCuttingConcerns.Exception.WebApi/Core.CrossCuttingConcerns.Exception.WebApi.csproj
@@ -13,6 +13,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Core.CrossCuttingConcerns.Exception\Core.CrossCuttingConcerns.Exception.csproj" />
+      <ProjectReference Include="..\Core.CrossCuttingConcerns.Logging\Core.CrossCuttingConcerns.Logging.csproj" />
     </ItemGroup>
 
 </Project>
