--- a/src/Core.Localization.DB/Core.Localization.DB.csproj
+++ b/src/Core.Localization.DB/Core.Localization.DB.csproj
@@ -7,13 +7,12 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.1" />
+      <Folder Include="Repositories\ResourceTranslations\" />
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Core.Localization.DB\Core.Localization.DB.csproj" />
-      <ProjectReference Include="..\Core.Localization.File\Core.Localization.File.csproj" />
       <ProjectReference Include="..\Core.Localization\Core.Localization.csproj" />
+      <ProjectReference Include="..\Core.Persistence\Core.Persistence.csproj" />
     </ItemGroup>
 
 </Project>
