fix(Core.CrossCuttingConceerns.Logging): updated logging in filelogger by log type

--- a/src/Core.CrossCuttingConcerns.Logging/Core.CrossCuttingConcerns.Logging.csproj
+++ b/src/Core.CrossCuttingConcerns.Logging/Core.CrossCuttingConcerns.Logging.csproj
@@ -19,4 +19,8 @@
       <PackageReference Include="Serilog.Sinks.RabbitMQ" Version="8.0.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Core.Constants\Core.Constants.csproj" />
+    </ItemGroup>
+
 </Project>
