--- a/src/Core.CrossCuttingConcerns.Logging/Core.CrossCuttingConcerns.Logging.csproj
+++ b/src/Core.CrossCuttingConcerns.Logging/Core.CrossCuttingConcerns.Logging.csproj
@@ -11,6 +11,7 @@
       <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.1" />
       <PackageReference Include="Npgsql" Version="9.0.2" />
       <PackageReference Include="Serilog" Version="4.2.0" />
+      <PackageReference Include="Serilog.Sinks.Async" Version="2.1.0" />
       <PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
       <PackageReference Include="Serilog.Sinks.Graylog" Version="3.1.1" />
       <PackageReference Include="Serilog.Sinks.MongoDB" Version="7.0.0" />
