fix(Core.Persistence): Since include depends on ef core, the solid principle is contrary to DI. Therefore the include feature has been removed.

--- a/src/Core.Localization.DB/Core.Localization.DB.csproj
+++ b/src/Core.Localization.DB/Core.Localization.DB.csproj
@@ -11,6 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Core.Application\Core.Application.csproj" />
       <ProjectReference Include="..\Core.Localization\Core.Localization.csproj" />
       <ProjectReference Include="..\Core.Persistence\Core.Persistence.csproj" />
     </ItemGroup>
