feat(Core.Security): added ResfreshToke and jwt mechanism. add sensitive logging in serilog

--- a/src/Core.Application/Core.Application.csproj
+++ b/src/Core.Application/Core.Application.csproj
@@ -17,6 +17,7 @@
       <ProjectReference Include="..\Core.CrossCuttingConcerns.Logging\Core.CrossCuttingConcerns.Logging.csproj" />
       <ProjectReference Include="..\Core.Localization\Core.Localization.csproj" />
       <ProjectReference Include="..\Core.Persistence\Core.Persistence.csproj" />
+      <ProjectReference Include="..\Core.Security\Core.Security.csproj" />
     </ItemGroup>
 
 </Project>
