--- a/src/Core.Security.DI/Core.Security.DI.csproj
+++ b/src/Core.Security.DI/Core.Security.DI.csproj
@@ -7,12 +7,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Core.Persistence\Core.Persistence.csproj" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.1" />
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.35.0" />
-      <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.35.0" />
+      <ProjectReference Include="..\Core.Security\Core.Security.csproj" />
     </ItemGroup>
 
 </Project>
