feat(Core): restructure persistence abstractions and implement localized exception handling
- Moved persistence abstraction interfaces to the new Persistence.Abstraction project for better modularity.
- Enhanced HttpExceptionHandler to support key-based localization for BusinessExceptions.
- Updated BusinessException to include 'KeySection' property for specific resource lookup.
- Integrated ILocalizationService into ExceptionMiddleware for dynamic error translation.
- Refactored DomainServiceRegistration to correctly resolve types implementing IDomainService using IsAssignableFrom.

--- a/src/Core.Persistence/Core.Persistence.csproj
+++ b/src/Core.Persistence/Core.Persistence.csproj
@@ -13,4 +13,8 @@
       <PackageReference Include="System.Linq.Dynamic.Core" Version="1.6.0.1" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Core.Persistence.Abstractions\Core.Persistence.Abstractions.csproj" />
+    </ItemGroup>
+
 </Project>
