--- a/src/Core.CrossCuttingConcerns.Exception.WebApi/Core.CrossCuttingConcerns.Exception.WebApi.csproj
+++ b/src/Core.CrossCuttingConcerns.Exception.WebApi/Core.CrossCuttingConcerns.Exception.WebApi.csproj
@@ -14,6 +14,7 @@
     <ItemGroup>
       <ProjectReference Include="..\Core.CrossCuttingConcerns.Exception\Core.CrossCuttingConcerns.Exception.csproj" />
       <ProjectReference Include="..\Core.CrossCuttingConcerns.Logging\Core.CrossCuttingConcerns.Logging.csproj" />
+      <ProjectReference Include="..\Core.Localization\Core.Localization.csproj" />
     </ItemGroup>
 
 </Project>
