--- a/src/Core.Security/Core.Security.csproj
+++ b/src/Core.Security/Core.Security.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Core.Persistence\Core.Persistence.csproj" />
+      <ProjectReference Include="..\Core.Security.Abstractions\Core.Security.Abstractions.csproj" />
     </ItemGroup>
 
     <ItemGroup>
